--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -8,9 +8,8 @@
     <div class="row">
       <div class="col">
         <ul class="contact-list">
-          <!--<li class="p-name">Report issues to: </li><li><a class="u-email" href="mailto:{{ site.support_email }}">{{ site.support_email }}</a></li>-->
-          <!--<li class="p-name">For business inquiries: </li><li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li></ul>-->
-          <li class="p-name">For business inquiries: </li><li><a class="u-email" href="mailto:santiagoloane@gmail.com">santiagoloane@gmail.com</a></li></ul>
+          <li class="p-name">Report issues to: </li><li><a class="u-email" href="mailto:{{ site.support_email }}">{{ site.support_email }}</a></li>
+          <li class="p-name">For business inquiries: </li><li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li></ul>
       </div>
 
       <div class="col"><ul class="social-media-list">
@@ -28,12 +27,12 @@
           <a href="">
             <i class="fab fa-fw fa-paypal"></i>
             <span class="username">Paypal [Coming Soon]</span>
-          </a></li>
-        <li>
-          <a href="">
-            <i class="fab fa-fw fa-patreon"></i>
-            <span class="username">Patreon [Coming Soon]</span>
           </a></li>-->
+        <li>
+          <a href="https://www.patreon.com/SmashRanks">
+            <i class="fab fa-fw fa-patreon"></i>
+            <span class="username">SmashRanks</span>
+          </a></li>
         <li>
           <a href="https://ko-fi.com/iago27">
             <!--<i class="fab fa-kofi"></i>-->
@@ -42,7 +41,7 @@
               <i class="fas fa-coffee fa-stack-2x" data-fa-transform="shrink-2 down-2"></i>
               <i class="fas fa-heart fa-stack-1x" data-fa-transform="shrink-5 down-1 left-1" style="color:white"></i>
             </div>
-            <span class="username">Ko-Fi</span>
+            <span class="username">Iago</span>
           </a></li>
         </ul></div>
     </div>
