--- a/docs/_includes/player_profile.html
+++ b/docs/_includes/player_profile.html
@@ -24,7 +24,12 @@
 					<h1 class="display-4" id="player_tag"></h1>
 				</div>	
 				<div class="p-4 d-flex flex-column col-2 justify-content-end shadow invisible" id="player_region_div">
-					<p class="text-muted text-center small font-italic">Region</p>
+					<p class="text-muted text-center small font-italic">
+						Region
+						<span class="text-left text-muted small">
+							<a id="player_region_link" style="text-decoration:none;"> ⟶</a>
+						</span>
+					</p>
 					<p class="text-center" id="player_region"></p>
 					<div class="d-flex flex-row justify-content-center">
 						<img id="player_region_flag" src="/assets/images/blank.gif" class="flag"></img>
