--- a/docs/_layouts/pretty.html
+++ b/docs/_layouts/pretty.html
@@ -26,7 +26,6 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
         <!--
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
@@ -45,6 +44,10 @@
         </ul>
         {% endif %}
       </header>
+      <!-- line break -->
+      <p class="invisible">
+        &nbsp;
+      </p>
       <section>
 
       {{ content }}
