--- a/docs/_layouts/pretty.html
+++ b/docs/_layouts/pretty.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="description" content="A smash.gg data analytics resource and database. Extremely under construction.">
+    <meta name="keywords" content="Smash,Ranks,Smashranks,Smash.gg,Rank,Ranking,Stats,Stat,Statistics,Super,Bros,SSB,Super Smash Bros,Smash Bros,Bros.,Elo,Glicko,Glicko-2,SRank,S-rank,Smashrank,Sigmoid,Trueskill,64,Melee,Brawl,Smash 4,For Wii U,Ultimate,PM,Project M,P:M,Project: M,Analysis,Analytics,Data,Database,Chart,Charts,Graph,Graphs,Head to head,H2h,Head2head,Head-to-head,Tournaments,Results,Bracket,Info,Information,History,Tracker,Player,Media">
+    <meta name="google-site-verification" content="IhzgtAKNj8AhRZdou3u8clmTKBpoKXdT_NMnxUrXppM">
 {% seo %}
     <link rel="icon" href="/assets/images/site_icons/sr_logo_minimal.png">
     <link rel="apple-touch-icon" sizes="128x128" href="/assets/images/site_icons/sr_logo_touch_icon.png">
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     {% include bootstrap_css.html %}
     {% include bootstrap_scripts.html %}
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
