--- a/docs/_includes/bootstrap_css.html
+++ b/docs/_includes/bootstrap_css.html
@@ -172,6 +172,14 @@
 		color: lightseagreen !important;
 		font-weight: 500 !important;
 	}
+	li.page-item .page-link {
+		color: turquoise !important;
+	}
+	li.page-item.active .page-link {
+		background-color: turquoise !important;
+		border-color: turquoise !important;
+		color: white !important;
+	}
 	a.link-unstyled {
 	  &,
 	  &:visited,
