--- a/docs/_includes/dbtable.html
+++ b/docs/_includes/dbtable.html
@@ -34,7 +34,7 @@
 								PGR
 							{% elsif {{page.title}} == 'Brawl' %}
 								SSBBRank
-							{% elsif {{page.title}} == '64' %}
+							{% elsif {{page.title}} == 64 %}
 								64LR
 							{% else %}
 								Rank
@@ -92,7 +92,7 @@
 								PGR
 							{% elsif {{page.title}} == 'Brawl' %}
 								SSBBRank
-							{% elsif {{page.title}} == '64' %}
+							{% elsif {{page.title}} == 64 %}
 								64LR
 							{% else %}
 								Rank
@@ -150,7 +150,7 @@
 								PGR
 							{% elsif {{page.title}} == 'Brawl' %}
 								SSBBRank
-							{% elsif {{page.title}} == '64' %}
+							{% elsif {{page.title}} == 64 %}
 								64LR
 							{% else %}
 								Rank
