--- a/docs/_layouts/ranking.html
+++ b/docs/_layouts/ranking.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% seo %}
+    {% include analytics_scripts.html %}
+    {% seo %}
     <link rel="icon" href="/assets/images/site_icons/sr_logo_minimal.png">
     <link rel="apple-touch-icon" sizes="128x128" href="/assets/images/site_icons/sr_logo_touch_icon.png">
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
@@ -54,22 +55,20 @@
       <section>
         {% include dbtable.html %}
       </section>
+
       {% include footer.html %}
-    </div>
+
+    </div> <!-- end of container -->
+
 
     <!-- Mobile scaling fix -->
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-
-    <!-- Google Analytics shtuff -->
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
   </body>
+  
+  <script>
+    // change pagination button link color
+    $(document).ready(function(){
+      $('a[class="page-link"]').attr('class','text-sr-link');
+    });
+  </script>
 </html>
