--- a/docs/_includes/event_list.html
+++ b/docs/_includes/event_list.html
@@ -125,6 +125,7 @@
 					  event['numEntrants'] + ' Entrants   •   ' + event['region'] +
 					'</h6>' +
 					'<p class="card-text">' +
+						//'<a class="card-link" href="/full/#'+event.key+'">Details ⟶</a>' +
 					'</p>'
 					);
 				$('#event_date_'+i).html(
