--- a/docs/_includes/player_profile.html
+++ b/docs/_includes/player_profile.html
@@ -136,7 +136,7 @@
 					<p class="text-muted text-center font-italic">vs. Top 10 </p>
 					<p class="lead text-center" id="top10_h2h"></p>
 				</a>
-				<a class="btn disabled" href="#top100_chart_container" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-100-button" id="top100_h2h_div">
+				<a class="btn" href="#top100_chart_container" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-100-button" id="top100_h2h_div">
 					<p class="text-muted text-center font-italic">vs. Top 100 </p>
 					<p class="lead text-center" id="top100_h2h"></p>
 				</a>
@@ -190,6 +190,12 @@
 				</div>
 			</div>
 		</div>
+		<!--<div id="trueskill_chart_container" class="chart-container collapse" style="position: relative;">
+			<div class="text-muted font-weight-light small invisible">~</div>
+			<div class="card">
+				<canvas id="trueskill_chart" class="p-3 chart" aria-label="trueskill-chart" width="400" height="200"></canvas>
+			</div>
+		</div>-->
 		<div id="top10_chart_container" class="container collapse" style="position:relative;width:100%;">
 			<table id="top10_chart" class="display table nowrap" style="width:100%">
 				<thead>
@@ -207,12 +213,23 @@
 				</tbody>
 			</table>
 		</div>
-		<!--<div id="trueskill_chart_container" class="chart-container collapse" style="position: relative;">
-			<div class="text-muted font-weight-light small invisible">~</div>
-			<div class="card">
-				<canvas id="trueskill_chart" class="p-3 chart" aria-label="trueskill-chart" width="400" height="200"></canvas>
-			</div>
-		</div>-->
+		<div id="top100_chart_container" class="container collapse" style="position:relative;width:100%;">
+			<table id="top100_chart" class="display table nowrap" style="width:100%">
+				<thead>
+					<tr>
+						<th></th>
+						<th>Rank</th>
+						<th>Tag</th>
+						<th>ID</th>
+						<th>Wins</th>
+						<th>Losses</th>
+						<th>Win %</th>
+					</tr>
+				</thead>
+				<tbody id="top100_chart_body">
+				</tbody>
+			</table>
+		</div>
 		<!-- line break -->
 		<hr class="my-4" style="padding:0px;">
 		<!-- event cards -->
