--- a/docs/_includes/bootstrap_css.html
+++ b/docs/_includes/bootstrap_css.html
@@ -22,6 +22,9 @@
 	.text-sr-primary {
 		color: lightseagreen; /* Hex = 20B2AA */
 	}
+	.border-sr-primary {
+		border-color: lightseagreen !important; /* Hex = 20B2AA */
+	}
 	.btn.btn-sr-primary {
 		background-color: lightseagreen; /* Hex = 20B2AA */
 		border-color: lightseagreen;
@@ -32,6 +35,9 @@
 
 	.text-sr-secondary {
 		color: teal; /* Hex = 008080 */
+	}
+	.border-sr-secondary {
+		border-color: teal !important; /* Hex = 008080 */
 	}
 	.btn.btn-sr-secondary {
 		background-color: teal; /* Hex = 008080 */
@@ -44,6 +50,9 @@
 	.text-sr-link {
 		color: turquoise; /* Hex = 40E0D0 */
 	}
+	.border-sr-link {
+		border-color: turquoise !important; /* Hex = 40E0D0 */
+	}
 	.btn.btn-sr-link {
 		background-color: turquoise; /* Hex = 40E0D0 */
 		border-color: turquoise;
@@ -54,6 +63,9 @@
 
 	.text-sr-dark {
 		color: dimgray; /* Hex = 696969 */      /* nice */
+	}
+	.border-sr-dark {
+		border-color: dimgray !important; /* Hex = 696969 */      /* nice */
 	}
 	.btn.btn-sr-dark {
 		background-color: dimgray; /* Hex = 696969 */      /* nice */
@@ -66,6 +78,9 @@
 	.text-sr-light {
 		color: gainsboro; /* Hex = DCDCDC */
 	}
+	.border-sr-light {
+		border-color: gainsboro !important; /* Hex = DCDCDC */
+	}
 	.btn.btn-sr-light {
 		background-color: gainsboro; /* Hex = DCDCDC */
 		border-color: gainsboro;
@@ -77,6 +92,9 @@
 	.text-sr-info {
 		color: slateblue; /* Hex = 6A5ACD */
 	}
+	.border-sr-info {
+		border-color: slateblue !important; /* Hex = 6A5ACD */
+	}
 	.btn.btn-sr-info {
 		background-color: slateblue; /* Hex = 6A5ACD */
 		border-color: slateblue;
@@ -87,6 +105,9 @@
 
 	.text-sr-danger {
 		color: crimson; /* Hex = DC143C */
+	}
+	.border-sr-danger {
+		border-color: crimson !important; /* Hex = DC143C */
 	}
 	.btn.btn-sr-danger {
 		background-color: crimson; /* Hex = DC143C */
@@ -173,11 +194,14 @@
 		font-weight: 500 !important;
 	}
 	li.page-item .page-link {
-		color: turquoise !important;
+		/*color: turquoise !important;*/
+		color: mediumturquoise !important;
 	}
 	li.page-item.active .page-link {
-		background-color: turquoise !important;
-		border-color: turquoise !important;
+		/*background-color: turquoise !important;
+		border-color: turquoise !important;*/
+		background-color: mediumturquoise !important;
+		border-color: mediumturquoise !important;
 		color: white !important;
 	}
 	a.link-unstyled {
@@ -191,7 +215,7 @@
 	    color: inherit !important;
 	    background-color: transparent;
 	    font-size: inherit;
-	    text-decoration: none;
+	    text-decoration: none !important;
 	    font-variant: inherit;
 	    font-weight: inherit;
 	    line-height: inherit;
