--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -41,7 +41,8 @@
               <i class="fas fa-coffee fa-stack-2x" data-fa-transform="shrink-2 down-2"></i>
               <i class="fas fa-heart fa-stack-1x" data-fa-transform="shrink-5 down-1 left-1" style="color:white"></i>
             </div>
-            <span class="username">Iago</span>
+            <!--<span class="username">Iago</span>-->
+            <span>Buy me a coffee!</span>
           </a></li>
         </ul></div>
     </div>
