--- a/docs/_layouts/ranking.html
+++ b/docs/_layouts/ranking.html
@@ -48,6 +48,9 @@
       -->
       </header>
       <section>
+        {% include page_heading.html %}
+      </section>
+      <section>
 
       {{ content }}
 
