--- a/docs/_includes/player_profile.html
+++ b/docs/_includes/player_profile.html
@@ -106,14 +106,17 @@
 											Rank
 										{% endif %}</p>
 					<p class="lead" id="player_mainrank" style="text-decoration:none;"></p>
+					<div class="text-muted small font-italic font-weight-light text-center" id="mainrank_trophy" style="padding:0px;margin:0px;"></div>
 				</a>
 				<a class="btn" data-toggle="collapse" href="#elo_chart_container" role="button" aria-expanded="false" aria-controls="elo-button" id="player_elo_button">
-						<p class="text-muted font-italic">Elo</p>
-						<p class="lead" id="player_elo"></p>
+					<p class="text-muted font-italic">Elo</p>
+					<p class="lead" id="player_elo"></p>
+					<div class="text-muted small font-italic font-weight-light text-center" id="elo_trophy" style="padding:0px;margin:0px;"></div>
 				</a>
 				<a class="btn" data-toggle="collapse" href="#glicko_chart_container" role="button" aria-expanded="false" aria-controls="glicko-button" id="player_glicko_button">
-						<p class="text-muted font-italic">Glicko</p>
-						<p class="lead link-unstyled" id="player_glicko"></p>
+					<p class="text-muted font-italic">Glicko</p>
+					<p class="lead link-unstyled" id="player_glicko"></p>
+					<div class="text-muted small font-italic font-weight-light text-center" id="glicko_trophy" style="padding:0px;margin:0px;"></div>
 				</a>
 				<!--<div class="p-2" id="player_trueskill_div">
 					<p class="text-muted font-italic">TrueSkill</p>
@@ -129,16 +132,19 @@
 					</span>
 					</p>
 					<p class="lead" id="player_srank" style="text-decoration:none;"></p>
+					<div class="text-muted small font-italic font-weight-light text-center" id="srank_trophy" style="padding:0px;margin:0px;"></div>
 				</a>
 			</div> <!-- skills -->
 			<div class="btn-group" role="group" aria-label="H2H at a glance" id="player_h2h_div">
 				<a class="btn btn-default disabled" href="#top10_chart_container" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-10-button" id="top10_h2h_div">
 					<p class="text-muted text-center font-italic">vs. Top 10 </p>
 					<p class="lead text-center" id="top10_h2h"></p>
+					<p class="text-muted small" id="top10_wr"></p>
 				</a>
 				<a class="btn disabled" href="#top100_chart_container" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-100-button" id="top100_h2h_div">
 					<p class="text-muted text-center font-italic">vs. Top 100 </p>
 					<p class="lead text-center" id="top100_h2h"></p>
+					<p class="text-muted small" id="top100_wr"></p>
 				</a>
 				<!--<a class="btn" href="#top500_chart_container" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="top-500-button" id="top500_h2h_div">
 					<p class="text-muted text-center font-italic">vs. Top 500 </p>
@@ -147,10 +153,6 @@
 			</div> <!-- h2h at a glance -->
 		</div> 
 		<div class="d-flex flex-row justify-content-end" id="today_date_div" style="padding:0px;margin:0px;">
-			<div class="text-muted small font-italic font-weight-light text-center" id="mainrank_trophy" style="padding:0px;margin:0px;"></div>
-			<div class="text-muted small font-italic font-weight-light text-center" id="elo_trophy" style="padding:0px;margin:0px;"></div>
-			<div class="text-muted small font-italic font-weight-light text-center" id="glicko_trophy" style="padding:0px;margin:0px;"></div>
-			<div class="text-muted small font-italic font-weight-light text-center" id="srank_trophy" style="padding:0px;margin:0px;"></div>
 			<div class="flex-grow-1 text-muted small font-italic font-weight-light" style="padding:0px;margin:0px;"></div>
 			<div class="col-2 text-muted small font-italic font-weight-light text-right" id="db_date" style="padding:0px;margin:0px;"></div>
 		</div> <!-- trophy case // date marker -->
